<resources>
    <!--All Page-->
    <string name="app_name">YZU Pass</string>
    <string name="yzu">YZU</string>
    <string name="BackButton">Back</string>

    <!--Home Page-->
    <string name="home_qr">QR Code</string>
    <string name="home_nfc">NFC</string>
    <string name="home_history">History</string>
    <string name="home_logout">Logout</string>
    <string name="path">Path</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="student">Student</string>
    <string name="user">User</string>

    <!--QRcode Page-->
    <string name="brightness">Highest brightness</string>
    <string name="qr_hint">Generating…</string>
    <string name="qr_expire">QR Code Expired</string>

    <!--History Page-->
    <string name="historyTitle">History</string>
    <string name="Place">地點</string>
    <string name="Time">時間</string>

    <!--Login Page-->
    <string name="Welcome">Welcome</string>
    <string name="Sid">Student ID</string>
    <string name="Cardid">Card ID</string>
    <string name="Login">Login</string>
    <string name="Card_Hint">Please approach your card to get Card Number</string>
    <string name="remember">  Remember Me</string>
    <string name="Loading">Loading…</string>

    <!--NFC Page-->
    <string name="Approach_hint">請接近感應機器</string>

    <!--Settings Page-->
    <string name="permission">Permission</string>
    <string name="modify_system">Allow Modify System Settings</string>
    <string name="modify_notify">Allow Notification</string>
    <string name="modify_nfc">NFC Setting</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark Theme (Beta)</string>

    <!--Feedback Page-->
    <string name="feedback_hint">Feel free to let us know</string>
    <string name="feedback_title">Suggestion and Bug report</string>
    <string name="feedback_icon">Sorry:-(</string>

    <!--About Page-->
    <string name="founder">Creator</string>
    <string name="founder1">王昇暉(Sam)</string>
    <string name="founder1_title">程式開發</string>
    <string name="founder2">莊昀皓(Aaron)</string>
    <string name="founder2_title">UI/UX 設計</string>
    <string name="founder3">張軒澤</string>
    <string name="founder3_title">後端設計</string>

    <!--Update Profile-->
    <string name="us_name">User Name</string>
    <string name="us_description">User Description</string>
</resources>
