<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting_btn"
        android:icon="@drawable/ic_half"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback_btn"
        android:icon="@drawable/ic_half"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_btn"
        android:icon="@drawable/ic_logout"
        android:title="@string/home_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_btn"
        android:icon="@drawable/ic_half"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
