<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondaryBackground"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/backBtnFeedback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/BackButton"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_down_width"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/feedback_title"
                    android:src="?attr/ic_feedback" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/feedback_title" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp"
                android:paddingVertical="18dp"
                android:weightSum="10">

                <EditText
                    android:id="@+id/feedback_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/feedback_hint"
                    android:hint="@string/feedback_hint"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <Button
                android:id="@+id/send_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="18dp"
                android:drawableLeft="@drawable/ic_send_black_24dp"
                android:gravity="center"
                android:text="@string/feedback_icon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>