<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/secondaryBackground"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/BackButton"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_down_width"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/permission"
                    android:src="?attr/setting_icon1" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/permission" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modify_system_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/modify_system" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/path"
                    android:paddingVertical="15dp"
                    android:src="@drawable/ic_path_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modify_notify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/modify_notify" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/path"
                    android:paddingVertical="15dp"
                    android:src="@drawable/ic_path_dark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/modify_nfc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/modify_nfc" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/path"
                    android:paddingVertical="15dp"
                    android:src="@drawable/ic_path_dark" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_down_width"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:weightSum="10">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/theme"
                    android:src="?attr/setting_icon2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/theme" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="12dp"
                    android:text="@string/dark_theme" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/dark_theme_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="12dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>









