<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/qr_bg"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".qrcode_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/BackButton"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="9"
        android:transitionName="QRCodeTransition"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/home_qr"
            android:gravity="center"
            android:weightSum="6"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/home_qr"
                android:id="@+id/qrgenerate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@drawable/ic_qr_code"
                android:paddingTop="20dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/qr_progress"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/counting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="0dp"
                    android:paddingBottom="19dp"
                    android:text="@string/qr_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="24dp"
                    android:paddingBottom="8dp"
                    android:text="@string/yzu"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/white" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/brightness"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <com.suke.widget.SwitchButton
            android:id="@+id/auto_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>