<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/history_bg"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/BackButton"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="11"
        android:transitionName="HistoryTransition"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historyTitle"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <TableRow
                    android:paddingVertical="12dp"
                    android:background="@drawable/table_down_width">
                    <ImageView
                        android:contentDescription="@string/historyTitle"
                        android:id="@+id/copy_icon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/Place"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center"
                        android:text="@string/Time"/>

                </TableRow>
            </TableLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="12dp">

                <TableLayout
                    android:id="@+id/data_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TableLayout>

            </ScrollView>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/history_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>


</LinearLayout>